# autonomous-ml-agent

./: .env.example  .gitignore  README.md  feedback.md  prd.md  pyproject.toml  test_data_exploration.py  test_simple_training.py
scripts/: sandbox_explore.py
src/: orchestrator.py  streamlit_app.py
src/agents/: base.py  data_exploration_agent.py  deployment_agent.py  hyperparameter_tuning_agent.py  model_selection_agent.py  preprocessing_agent.py  preprocessing_transformer_agent.py  simple_training_agent.py  tuned_training_agent.py
